# SlicerCartooner

./: CMakeLists.txt  README.md
Autoscroll/: CMakeLists.txt  SegmentEditorAutoscroll.py
Autoscroll/SegmentEditorAutoscrollLib/: SegmentEditorEffect.py
Cartooner/: CMakeLists.txt  SegmentEditorCartooner.py
Cartooner/SegmentEditorCartoonerLib/: SegmentEditorEffect.py
